--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -611,8 +611,8 @@ codemodernizer.chat.message.result.fail=Sorry, I ran into an issue during the tr
 codemodernizer.chat.message.result.fail_initial_build=I am having trouble building your project in the secure build environment and couldn't complete the transformation.
 codemodernizer.chat.message.result.fail_initial_build_no_build_log=I am having trouble building your project in the secure build environment: {0}.
 codemodernizer.chat.message.result.fail_with_known_reason=Sorry, I couldn''t complete the transformation. {0}
-codemodernizer.chat.message.result.partially_success=I upgraded part of your code to Java 17. You can review the diff to see my proposed changes and accept or reject them. The transformation summary has details about the files I updated and the errors that prevented a complete transformation.
-codemodernizer.chat.message.result.success=I successfully upgraded your code to Java 17. You can review the diff to see my proposed changes and accept or reject them. The transformation summary has details about the files I updated.
+codemodernizer.chat.message.result.partially_success=I upgraded part of your code. You can review the diff to see my proposed changes and accept or reject them. The transformation summary has details about the files I updated and the errors that prevented a complete transformation.
+codemodernizer.chat.message.result.success=I successfully finished the transformation. You can review the diff to see my proposed changes and accept or reject them. The transformation summary has details about the files I updated.
 codemodernizer.chat.message.result.zip_too_large=Sorry, your project size exceeds the Amazon Q Code Transformation upload limit of 2GB.
 codemodernizer.chat.message.resume_ongoing=I'm still transforming your code. It can take 10 to 30 minutes to upgrade your code, depending on the size of your module. To monitor progress, go to the Transformation Hub.
 codemodernizer.chat.message.skip_tests=I will build your module using `mvn test` by default. If you would like me to build your module without running unit tests, I will use `mvn test-compile`.
@@ -681,7 +681,7 @@ codemodernizer.migration_plan.substeps.description_succeed=Build succeeded
 codemodernizer.migration_summary.header.title=Transformation summary
 codemodernizer.notification.info.download.started.content=Downloading the updated code
 codemodernizer.notification.info.download.started.title=Download Started
-codemodernizer.notification.info.modernize_complete.content=Amazon Q upgraded your code to Java 17. You can review the diff to see the proposed changes and accept or reject them. The transformation summary has details about the files that were updated.
+codemodernizer.notification.info.modernize_complete.content=Amazon Q finished the transformation. You can review the diff to see the proposed changes and accept or reject them. The transformation summary has details about the files that were updated.
 codemodernizer.notification.info.modernize_complete.title=Transform Complete
 codemodernizer.notification.info.modernize_complete.view_diff=View diff
 codemodernizer.notification.info.modernize_complete.view_summary=View transformation summary
@@ -689,7 +689,7 @@ codemodernizer.notification.info.modernize_failed.connection_failed=Amazon Q cou
 codemodernizer.notification.info.modernize_failed.title=Transformation failed
 codemodernizer.notification.info.modernize_failed.unknown_failure_reason=Unknown failure reason
 codemodernizer.notification.info.modernize_ongoing.view_status=View status
-codemodernizer.notification.info.modernize_partial_complete.content=Amazon Q upgraded part of your code to Java 17. You can review the diff to see my proposed changes and accept or reject them. The transformation summary has details about the files I updated and the errors that prevented a complete transformation.
+codemodernizer.notification.info.modernize_partial_complete.content=Amazon Q upgraded part of your code. You can review the diff to see my proposed changes and accept or reject them. The transformation summary has details about the files I updated and the errors that prevented a complete transformation.
 codemodernizer.notification.info.modernize_partial_complete.title=Transformation partially successful!
 codemodernizer.notification.info.transformation_resume.content=Amazon Q was unable to resume polling for the job you started before closing the project.
 codemodernizer.notification.info.transformation_resume.title=Unable to resume polling for job updates.
