--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -583,6 +583,7 @@ codemodernizer.chat.message.button.view_diff=View diff
 codemodernizer.chat.message.button.view_failure_build_log=View Failure Build Log
 codemodernizer.chat.message.button.view_summary=View summary
 codemodernizer.chat.message.choose_objective=Enter "language upgrade" or "SQL conversion"
+codemodernizer.chat.message.changes_applied=I applied the changes to your project.
 codemodernizer.chat.message.download_failed_client_instructions_expired=Your transformation is not available anymore. Your code and transformation summary are deleted 24 hours after the transformation completes. Please try starting the transformation again.
 codemodernizer.chat.message.download_failed_invalid_artifact=Sorry, I was unable to find your {0}. Artifacts are deleted after 24 hours. Please try starting the transformation again.
 codemodernizer.chat.message.download_failed_other=Sorry, I ran into an issue while trying to download your {0}. Please try again. {1}
@@ -617,7 +618,8 @@ I can now divide the transformation results into diff patches (if applicable to 
 - Popular Enterprise Specifications Application Frameworks: Popular enterprise and application frameworks like Jakarta EE, Hibernate, and Micronaut 3.\n\n\
 - HTTP Client Utilities Web Frameworks: HTTP client libraries, Apache Commons utilities, and Struts frameworks.\n\n\
 - Testing Tools Frameworks: Testing tools like ArchUnit, Mockito, and TestContainers and build tools like Jenkins and Maven Wrapper.\n\n\
-- Miscellaneous Processing Documentation: Diverse set spanning ORMs, XML processing, and API documentation like Swagger to SpringDoc/OpenAPI.
+- Miscellaneous Processing Documentation: Diverse set spanning ORMs, XML processing, and API documentation like Swagger to SpringDoc/OpenAPI.\n\n\
+- Deprecated API replacement and dependency upgrades: Replaces deprecated APIs and makes additional dependency version upgrades.
 codemodernizer.chat.message.one_or_multiple_diffs_form.multiple_diffs=Multiple diffs
 codemodernizer.chat.message.one_or_multiple_diffs_form.one_diff=One diff
 codemodernizer.chat.message.one_or_multiple_diffs_form.response=Okay, I will create {0} when providing the proposed changes.
