fixing failed test and lint

--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -582,8 +582,8 @@ codemodernizer.chat.message.button.view_build=View build progress
 codemodernizer.chat.message.button.view_diff=View diff
 codemodernizer.chat.message.button.view_failure_build_log=View Failure Build Log
 codemodernizer.chat.message.button.view_summary=View summary
-codemodernizer.chat.message.choose_objective=Enter "language upgrade" or "SQL conversion"
 codemodernizer.chat.message.changes_applied=I applied the changes to your project.
+codemodernizer.chat.message.choose_objective=Enter "language upgrade" or "SQL conversion"
 codemodernizer.chat.message.download_failed_client_instructions_expired=Your transformation is not available anymore. Your code and transformation summary are deleted 24 hours after the transformation completes. Please try starting the transformation again.
 codemodernizer.chat.message.download_failed_invalid_artifact=Sorry, I was unable to find your {0}. Artifacts are deleted after 24 hours. Please try starting the transformation again.
 codemodernizer.chat.message.download_failed_other=Sorry, I ran into an issue while trying to download your {0}. Please try again. {1}
@@ -612,14 +612,7 @@ codemodernizer.chat.message.hil.user_rejected=I'll continue upgrading your modul
 codemodernizer.chat.message.local_build_begin=I'm building your module. This can take up to 10 minutes, depending on the size of your module.
 codemodernizer.chat.message.local_build_failed=Sorry, I couldn't run the Maven clean install command to build your module.
 codemodernizer.chat.message.local_build_success=I was able to build your module and will start uploading your code.
-codemodernizer.chat.message.one_or_multiple_diffs=\
-I can now divide the transformation results into diff patches (if applicable to the app) if you would like to review and accept each diff with fewer changes:\n\n\
-- Minimal Compatible Library Upgrade to Java 17: Dependencies to the minimum compatible versions in Java 17, including Springboot, JUnit, and PowerMockito.\n\n\
-- Popular Enterprise Specifications Application Frameworks: Popular enterprise and application frameworks like Jakarta EE, Hibernate, and Micronaut 3.\n\n\
-- HTTP Client Utilities Web Frameworks: HTTP client libraries, Apache Commons utilities, and Struts frameworks.\n\n\
-- Testing Tools Frameworks: Testing tools like ArchUnit, Mockito, and TestContainers and build tools like Jenkins and Maven Wrapper.\n\n\
-- Miscellaneous Processing Documentation: Diverse set spanning ORMs, XML processing, and API documentation like Swagger to SpringDoc/OpenAPI.\n\n\
-- Deprecated API replacement and dependency upgrades: Replaces deprecated APIs and makes additional dependency version upgrades.
+codemodernizer.chat.message.one_or_multiple_diffs=I can now divide the transformation results into diff patches (if applicable to the app) if you would like to review and accept each diff with fewer changes:\n\n\ - Minimal Compatible Library Upgrade to Java 17: Dependencies to the minimum compatible versions in Java 17, including Springboot, JUnit, and PowerMockito.\n\n\ - Popular Enterprise Specifications Application Frameworks: Popular enterprise and application frameworks like Jakarta EE, Hibernate, and Micronaut 3.\n\n\ - HTTP Client Utilities Web Frameworks: HTTP client libraries, Apache Commons utilities, and Struts frameworks.\n\n\ - Testing Tools Frameworks: Testing tools like ArchUnit, Mockito, and TestContainers and build tools like Jenkins and Maven Wrapper.\n\n\ - Miscellaneous Processing Documentation: Diverse set spanning ORMs, XML processing, and API documentation like Swagger to SpringDoc/OpenAPI.\n\n\ - Deprecated API replacement and dependency upgrades: Replaces deprecated APIs and makes additional dependency version upgrades.
 codemodernizer.chat.message.one_or_multiple_diffs_form.multiple_diffs=Multiple diffs
 codemodernizer.chat.message.one_or_multiple_diffs_form.one_diff=One diff
 codemodernizer.chat.message.one_or_multiple_diffs_form.response=Okay, I will create {0} when providing the proposed changes.
