show notifications when panel is opened

--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -1257,6 +1257,7 @@ gateway.connection.workflow.start_ide=Start IDE
 gateway.connection.workflow.step_failed=\nStep failed exceptionally\n
 gateway.connection.workflow.step_skipped=Step skipped
 gateway.connection.workflow.step_successful=\nStep completed successfully\n
+general.acknowledge=Acknowledge
 general.add.another=Add another
 general.auth.reauthenticate=Reauthenticate
 general.cancel=Cancel
@@ -1285,6 +1286,7 @@ general.in_progress_button=In progress
 general.logs=Logs
 general.message=Message
 general.more=More
+general.more_dialog=More...
 general.name.label=Name:
 general.no_changes=No changes were provided
 general.notification.action.hide_forever=Don't show again
