Show toasts for notifications and notification banner on critical notifications(#5097)
* Display toast notifications with actions

* Condition matcher for displaying notifications

* Show notification banner

* feedback 1

* Modified deserialization cases and added tests

* not required file change

* feedback 1

* feedback 1

* modified the base class

* merge conflicts resolved

* rearranged call site

* show notifications when panel is opened

* fixed tests

* detekt

* feedback

* convert panels into wrappers

* fixed test

--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -1257,6 +1257,7 @@ gateway.connection.workflow.start_ide=Start IDE
 gateway.connection.workflow.step_failed=\nStep failed exceptionally\n
 gateway.connection.workflow.step_skipped=Step skipped
 gateway.connection.workflow.step_successful=\nStep completed successfully\n
+general.acknowledge=Acknowledge
 general.add.another=Add another
 general.auth.reauthenticate=Reauthenticate
 general.cancel=Cancel
@@ -1271,6 +1272,7 @@ general.default=Default
 general.delete=Delete
 general.delete_accessible_name=Delete confirmation box
 general.details=(details)
+general.dismiss=Dismiss
 general.execute_button=Execute
 general.execution.canceled=canceled
 general.execution.cli_error=Command did not exit successfully, exit code: {0}\n
@@ -1284,10 +1286,12 @@ general.in_progress_button=In progress
 general.logs=Logs
 general.message=Message
 general.more=More
+general.more_dialog=More...
 general.name.label=Name:
 general.no_changes=No changes were provided
 general.notification.action.hide_forever=Don't show again
 general.notification.action.hide_once=Dismiss
+general.ok=OK
 general.open.in.progress=Opening...
 general.open_in_aws_console=Open in AWS Console
 general.open_in_aws_console.error=Failed to open link in browser
@@ -1530,6 +1534,10 @@ lambda.workflow.update_code.wait_for_updatable=Waiting for function to transitio
 loading_resource.failed=Failed loading resources
 loading_resource.loading=Loading...
 loading_resource.still_loading=Resources are still loading
+notification.changelog=Changelog
+notification.expand=Expand
+notification.learn_more=Learn more
+notification.update=Update
 plugin.incompatible.fix=Disable incompatible plugins and restart IDE
 plugin.incompatible.message=The plugin versions for Amazon Q, AWS Toolkit, and AWS Toolkit Core must match or conflicts may occur.
 plugin.incompatible.title=AWS Plugin Incompatibility
