Fix 'ActionGroup should be registered using <group> tag' (#5147)

--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -13,7 +13,6 @@ action.aws.caws.rebuildAction.text=Rebuild Dev Environment
 action.aws.caws.updateDevfile.text=Update Devfile...
 action.aws.toolkit.caws.logout.text=Sign out
 action.aws.toolkit.caws.profile.text=View Profile...
-action.aws.toolkit.dynamoViewer.changeMaxResults.text=Max Results
 action.aws.toolkit.dynamodb.delete_table.text=Delete Table...
 action.aws.toolkit.ecr.repository.pull.text=Pull from Repository...
 action.aws.toolkit.ecr.repository.push.text=Push to Repository...
@@ -1446,6 +1445,7 @@ gettingstarted.setup.tabs.builderid=AWS Builder ID
 gettingstarted.setup.tabs.iam=IAM Credentials
 gettingstarted.setup.tabs.idc=IAM Identity Center
 gettingstarted.setup.title=AWS Toolkit: Setup Authentication
+group.aws.toolkit.dynamoViewer.changeMaxResults.text=Max Results
 group.aws.toolkit.dynamoViewer.toolbar.settings.text=Settings
 group.aws.toolkit.jetbrains.core.services.cwc.actions.ContextMenuActions.text=Amazon Q
 group.aws.toolkit.s3viewer.contextMenu.copyGroup.text=Copy
