--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -624,6 +624,7 @@ codemodernizer.chat.message.button.view_failure_build_log=View Failure Build Log
 codemodernizer.chat.message.button.view_summary=View summary
 codemodernizer.chat.message.changes_applied=I applied the changes to your project.
 codemodernizer.chat.message.choose_objective=I can help you with the following tasks:\n- Upgrade your Java 8 and Java 11 codebases to Java 17, or upgrade Java 17 code with up to date libraries and other dependencies.\n- Convert embedded SQL code for Oracle to PostgreSQL database migrations in AWS DMS.\n\nWhat would you like to do? You can enter "language upgrade" or "sql conversion".
+codemodernizer.chat.message.choose_objective_placeholder=Enter "language upgrade" or "sql conversion"
 codemodernizer.chat.message.download_failed_client_instructions_expired=Your transformation is not available anymore. Your code and transformation summary are deleted 24 hours after the transformation completes. Please try starting the transformation again.
 codemodernizer.chat.message.download_failed_invalid_artifact=Sorry, I was unable to find your {0}. Artifacts are deleted after 24 hours. Please try starting the transformation again.
 codemodernizer.chat.message.download_failed_other=Sorry, I ran into an issue while trying to download your {0}. Please try again. {1}
@@ -674,6 +675,7 @@ codemodernizer.chat.message.sql_metadata_success=I found the following source da
 codemodernizer.chat.message.sql_module_schema_prompt=To continue, choose the module and schema for this transformation.
 codemodernizer.chat.message.transform_begin=I'm starting to transform your code. It can take 10 to 30 minutes to upgrade your code, depending on the size of your module. To monitor progress, go to the Transformation Hub.
 codemodernizer.chat.message.transform_cancelled_by_user=I cancelled your transformation. If you want to start another transformation, choose **Start a new transformation**.
+codemodernizer.chat.message.transform_failed=I could not complete the transformation. {0}
 codemodernizer.chat.message.transform_in_progress=If I run into any issues, I might pause the transformation to get input from you on how to proceed.
 codemodernizer.chat.message.transform_stopped_by_user=I stopped your transformation. If you want to start another transformation, choose **Start a new transformation**.
 codemodernizer.chat.message.transform_stopping=I'm stopping your transformation...
@@ -741,7 +743,6 @@ codemodernizer.notification.info.download.started.content=Downloading the update
 codemodernizer.notification.info.download.started.title=Download Started
 codemodernizer.notification.info.modernize_complete.content=Amazon Q finished the transformation. You can review the diff to see the proposed changes and accept or reject them. The transformation summary has details about the files that were updated.
 codemodernizer.notification.info.modernize_complete.title=Transform Complete
-codemodernizer.notification.info.modernize_complete.view_diff=View diff
 codemodernizer.notification.info.modernize_complete.view_summary=View transformation summary
 codemodernizer.notification.info.modernize_failed.connection_failed=Amazon Q could not complete the transformation. Try starting the transformation again. {0}
 codemodernizer.notification.info.modernize_failed.title=Transformation failed
@@ -767,9 +768,7 @@ codemodernizer.notification.warn.download_failed_other.content=Amazon Q ran into
 codemodernizer.notification.warn.download_failed_ssl.content=Please make sure all your certificates for your proxy client have been set up correctly for your IDE.
 codemodernizer.notification.warn.download_failed_wildcard.content=Check your IDE proxy settings and remove any wildcard (*) references, and then try viewing the diff again.
 codemodernizer.notification.warn.expired_credentials.title=Your connection to Q has expired
-codemodernizer.notification.warn.invalid_project.description.reason.invalid_jdk_versions=None of your open modules are supported for code transformation with Amazon Q. Amazon Q can upgrade Java 8, Java 11, and Java 17 projects built on Maven.
 codemodernizer.notification.warn.invalid_project.description.reason.missing_content_roots=None of your open modules are supported for code transformation with Amazon Q. Amazon Q can upgrade Java 8, Java 11, and Java 17 projects built on Maven, with content roots configured.
-codemodernizer.notification.warn.invalid_project.description.reason.no_valid_files=None of your open modules are supported for code transformation with Amazon Q. A pom.xml is required for transformation. Amazon Q can upgrade Java 8, Java 11, and Java 17 projects built on Maven.
 codemodernizer.notification.warn.invalid_project.description.reason.not_logged_in=Amazon Q cannot start the transformation as you are not logged in with Identity Center or Builder ID. Also ensure that you are not using IntelliJ version 232.8660.185 and that you are not developing on a remote host (uncommon).
 codemodernizer.notification.warn.invalid_project.description.reason.remote_backend=None of your open modules are supported for code transformation with Amazon Q. Amazon Q cannot transform projects running on a remote host.
 codemodernizer.notification.warn.maven_failed.content=Amazon Q could not run the Maven clean install command to build your module.
@@ -793,7 +792,6 @@ codemodernizer.notification.warn.zip_creation_failed=Amazon Q could not zip the 
 codemodernizer.notification.warn.zip_creation_failed.reasons.unknown=An unexpected error occurred
 codemodernizer.notification.warn.zip_too_large.content=Sorry, your project size exceeds the Amazon Q Code Transformation upload limit of 2GB.
 codemodernizer.notification.warn.zip_too_large.title=Project size exceeds limit
-codemodernizer.toolwindow.banner.action.diff=View diff
 codemodernizer.toolwindow.banner.action.feedback=Provide Feedback
 codemodernizer.toolwindow.banner.action.plan=View transformation plan
 codemodernizer.toolwindow.banner.action.summary=View transformation summary
@@ -825,11 +823,12 @@ codemodernizer.toolwindow.scan_in_progress.stopping=Stopping the job...
 codemodernizer.toolwindow.scan_in_progress.transforming=Amazon Q is transforming your code.
 codemodernizer.toolwindow.stop_scan=Stop job
 codemodernizer.toolwindow.table.header.date=Date
-codemodernizer.toolwindow.table.header.job_id=Job Id
+codemodernizer.toolwindow.table.header.job_id=Job ID
 codemodernizer.toolwindow.table.header.module_name=Module name
 codemodernizer.toolwindow.table.header.run_length=Job running time
 codemodernizer.toolwindow.table.header.status=Status
 codemodernizer.toolwindow.transformation.progress.header=Transformation progress
+codemodernizer.toolwindow.transformation.progress.job_id=Job ID: {0}
 codemodernizer.toolwindow.transformation.progress.running_time=Running time: {0}
 codescan.chat.message.button.fileScan=Review active file
 codescan.chat.message.button.openIssues=View in Code Issues Panel
