--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -59,6 +59,7 @@ amazonqDoc.progress_message.scanning=Scanning source files
 amazonqDoc.progress_message.summarizing=Summarizing source files
 amazonqDoc.progress_message.updating=Okay, I'm updating the README to reflect your code changes.
 amazonqDoc.prompt.create=Create a README
+amazonqDoc.prompt.create.confirmation=Create a README for this project?
 amazonqDoc.prompt.folder.change=Change folder
 amazonqDoc.prompt.folder.proceed=Yes
 amazonqDoc.prompt.placeholder=Choose an option to continue
@@ -69,8 +70,8 @@ amazonqDoc.prompt.review.accept=Accept
 amazonqDoc.prompt.review.changes=Make changes
 amazonqDoc.prompt.review.message=Please review and accept the changes.
 amazonqDoc.prompt.update=Update an existing README
-amazonqDoc.prompt.update.follow_up.edit=Make a specific edit or change
-amazonqDoc.prompt.update.follow_up.sync=Synchronize with recent code changes
+amazonqDoc.prompt.update.follow_up.edit=Make a specific change
+amazonqDoc.prompt.update.follow_up.sync=Update README with recent code changes
 amazonqDoc.session.create=Create documentation for a specific folder
 amazonqDoc.session.sync=Sync documentation
 amazonqFeatureDev.chat_message.ask_for_new_task=What new task would you like to work on?
