fix(amazonq): /doc fix prompt to change folder in chat

--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -59,6 +59,8 @@ amazonqDoc.progress_message.generating=Generating documentation
 amazonqDoc.progress_message.scanning=Scanning source files
 amazonqDoc.progress_message.summarizing=Summarizing source files
 amazonqDoc.progress_message.updating=Okay, I'm updating the README.
+amazonqDoc.prompt.canceled_source_folder_selection=It looks like you didn't choose a folder. Choose a folder to continue.
+amazonqDoc.prompt.choose_folder_to_continue=Choose a folder to continue
 amazonqDoc.prompt.create=Create a README
 amazonqDoc.prompt.create.confirmation=Create a README for this project?
 amazonqDoc.prompt.folder.change=Change folder
