--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -2047,16 +2047,17 @@ sqs.subscribe.sns.validation.empty_topic=Topic must be specified.
 sqs.toolwindow=SQS
 sqs.url.parse_error=Error parsing SQS queue URL
 tags.title=Tags
-testgen.error.generic_error_message=I am experiencing technical difficulties at the moment. Please try again in a few minutes.
+testgen.error.generic_error_message=Amazon Q encountered an error while generating tests. Try again later.
+testgen.error.generic_technical_error_message=I am experiencing technical difficulties at the moment. Please try again in a few minutes.
 testgen.error.maximum_generations_reach=You've reached the monthly quota for Amazon Q Developer's agent capabilities. You can try again next month. For more information on usage limits, see the <a href=\"https://aws.amazon.com/q/developer/pricing/\" target=\"_blank\">Amazon Q Developer pricing page</a>.
 testgen.message.cancelled=Unit test generation cancelled.
 testgen.message.failed=Sorry, Test generation failed. Please try again in few minutes.
 testgen.message.regenerate_input=Sure thing. Please provide new instructions for me to generate the tests, and select the function(s) you would like to test.
 testgen.message.success=Unit test generation completed.
-testgen.no_file_found=Sorry, I couldn't find a file to generate tests.
+testgen.no_file_found=Sorry, there isn't a source file open right now that I can generate a test for. Make sure you open a source file so I can generate tests.
 testgen.placeholder.newtab=Ask any coding question or type \u0022/\u0022 for actions
 testgen.placeholder.select_an_option = Please select an action to proceed (Accept or Reject)
-testgen.placeholder.view_diff="Select View Diff to see the generated unit tests"
+testgen.placeholder.view_diff=Select View Diff to see the generated unit tests
 testgen.placeholder.waiting_on_your_inputs=Waiting on your inputs...
 testgen.progressbar.generate_unit_tests=Generating unit tests...
 toolkit.login.aws_builder_id.already_connected.cancel=Use existing AWS Builder ID
