fix(amazonq): rely on server-side data to communicate number of code generations remaining

--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -86,7 +86,8 @@ amazonqFeatureDev.code_generation.failed_generation=Code generation failed
 amazonqFeatureDev.code_generation.generating_code=Generating code ...
 amazonqFeatureDev.code_generation.iteration_counts=Would you like me to add this code to your project, or provide feedback for new code? You have {0} out of {1} code generations left.
 amazonqFeatureDev.code_generation.iteration_limit.error_text=Sorry, you've reached the quota for number of iterations on code generation. You can insert this code in your files or discuss a new plan. For more information on quotas, see the [Amazon Q Developer documentation](https://docs.aws.amazon.com/amazonq/latest/qdeveloper-ug/software-dev.html#quotas).
-amazonqFeatureDev.code_generation.iteration_zero=Would you like me to add this code to your project?
+amazonqFeatureDev.code_generation.iteration_or_feedback=Would you like me to add this code to your project, or provide feedback for new code?
+amazonqFeatureDev.code_generation.iteration_no_display=Would you like me to add this code to your project?
 amazonqFeatureDev.code_generation.no_file_changes=Unable to generate any file changes
 amazonqFeatureDev.code_generation.no_retries.error_message=I'm sorry, I'm having trouble generating your code and can't continue at the moment. Please try again later, and share feedback to help me improve.
 amazonqFeatureDev.code_generation.notification_message=Your code suggestions from Amazon Q are ready to review
@@ -94,6 +95,7 @@ amazonqFeatureDev.code_generation.notification_open_link=Open chat
 amazonqFeatureDev.code_generation.notification_title=Amazon Q Developer Agent for software development
 amazonqFeatureDev.code_generation.provide_code_feedback=How can I improve the code for your use case?
 amazonqFeatureDev.code_generation.stopped_code_generation=I stopped generating your code. If you want to continue working on this task, provide another description. You have {0} out of {1} code generations left.
+amazonqFeatureDev.code_generation.stopped_code_generation_no_display=I stopped generating your code. If you want to continue working on this task, provide another description.
 amazonqFeatureDev.code_generation.stopped_code_generation_no_iterations=I stopped generating your code. You don't have more iterations left, however, you can start a new session.
 amazonqFeatureDev.code_generation.stopping_code_generation=Stopping code generation...
 amazonqFeatureDev.code_generation.updated_code=Okay, I updated your code files. Would you like to work on another task?
