fix(amazonq): check job status directly before completing (#5281)
* fix(amazonq): check job status directly before completing

* address comment

---------

Co-authored-by: David Hasani <davhasan@amazon.com>

--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -803,7 +803,7 @@ codemodernizer.toolwindow.banner.job_starting=Job is starting.
 codemodernizer.toolwindow.banner.no_ongoing_job=No job ongoing.
 codemodernizer.toolwindow.banner.run_scan_complete=All steps of transformation successful
 codemodernizer.toolwindow.banner.run_scan_info=Select 'Transform' in toolbar to upgrade this package.
-codemodernizer.toolwindow.job_status.header=Job status
+codemodernizer.toolwindow.job_status.header=Transformation status
 codemodernizer.toolwindow.label=Transformation Hub - {0}
 codemodernizer.toolwindow.label_no_job=Transformation Hub
 codemodernizer.toolwindow.problems_mvn_window_not_found=Unable to display Code Transform results as the Maven window cannot be fetched.
