--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -641,7 +641,7 @@ codemodernizer.chat.message.hil.error.cancel_dependency_search=I cancelled the l
 codemodernizer.chat.message.hil.error.cancel_upload=I cancelled the dependency upload.
 codemodernizer.chat.message.hil.error.cannot_download_artifact=I ran into an error trying to download the dependency information.
 codemodernizer.chat.message.hil.error.cannot_upload=I'm sorry, I wasn't able to upload the dependency you chose.
-codemodernizer.chat.message.hil.error.no_other_versions_found=I couldn''t find any other versions of this dependency in your local Maven repository. Try transforming the **{0}** dependency to make it compatible with Java 17, and then try transforming this module again.
+codemodernizer.chat.message.hil.error.no_other_versions_found=I couldn''t find any other versions of this dependency in your local Maven repository. Try transforming the **{0}** dependency to make it compatible with your target Java version, and then try transforming this module again.
 codemodernizer.chat.message.hil.pom_snippet_title=Here is the dependency causing the issue:
 codemodernizer.chat.message.hil.resumed=I received your target version dependency. I'll continue transforming your code. You can monitor progress in the Transformation Hub.
 codemodernizer.chat.message.hil.searching=I'm searching for other dependency versions available in your Maven repository...
@@ -692,8 +692,8 @@ codemodernizer.chat.message.validation.error.missing_sct_file=An .sct file is re
 codemodernizer.chat.message.validation.error.more_info=For more information, see the [Amazon Q documentation]({0}).
 codemodernizer.chat.message.validation.error.no_java_project=Sorry, I could not find an open Java module with embedded Oracle SQL statements. Make sure you have a Java module open that has at least 1 content root.
 codemodernizer.chat.message.validation.error.no_pom=I couldn't find a module that I can upgrade. Your Java project must be built on Maven and contain a pom.xml file. For more information, see the [Amazon Q documentation]({0}).
-codemodernizer.chat.message.validation.error.other=I couldn't find a module that I can upgrade. Currently, I support Java 8, Java 11, and Java 17 projects built on Maven. Make sure your project is open in the IDE. If you have a Java 8, Java 11, or Java 17 module in your workspace, you might need to configure your project so that I can find it. Go to File and choose Project Structure. In the Projects tab, set the correct project JDK and the correct language level. In the Modules tab, set the correct module JDK and language level.
-codemodernizer.chat.message.validation.error.unsupported_java_version=I couldn't find a module that I can upgrade. Currently, I support Java 8, Java 11, and Java 17 projects built on Maven. Make sure your project is open in the IDE. If you have a Java 8, Java 11, or Java 17 in your workspace, you might need to configure your project so that I can find it. Go to File and choose Project Structure. In the Projects tab, set the correct project JDK and the correct language level. In the Modules tab, set the correct module JDK and language level.
+codemodernizer.chat.message.validation.error.other=I couldn't find a module that I can upgrade. Currently, I support Java 8, Java 11, Java 17, and Java 21 projects built on Maven. Make sure your project is open in the IDE. If you have a Java 8, Java 11, Java 17, or Java 21 module in your workspace, you might need to configure your project so that I can find it. Go to File and choose Project Structure. In the Projects tab, set the correct project JDK and the correct language level. In the Modules tab, set the correct module JDK and language level.
+codemodernizer.chat.message.validation.error.unsupported_java_version=I couldn't find a module that I can upgrade. Currently, I support Java 8, Java 11, Java 17, and Java 21 projects built on Maven. Make sure your project is open in the IDE. If you have a Java 8, Java 11, Java 17, or Java 21 in your workspace, you might need to configure your project so that I can find it. Go to File and choose Project Structure. In the Projects tab, set the correct project JDK and the correct language level. In the Modules tab, set the correct module JDK and language level.
 codemodernizer.chat.message.validation.no_jdk=I couldn't build your project with your current JDK configuration. To update your JDK, go to File and choose Project Structure. In the Projects tab, set the correct project JDK in the SDK field. In the Modules tab, set the correct module JDK in the SDK field. In Maven Runner settings, set the correct JDK in the JRE field.
 codemodernizer.chat.prompt.label.dependency_current_version=Current version
 codemodernizer.chat.prompt.label.dependency_name=Dependency name
@@ -710,7 +710,7 @@ codemodernizer.explorer.show_transformation_status=Show transformation status
 codemodernizer.explorer.show_transformation_status_description=View transformation status
 codemodernizer.explorer.show_transformation_summary_title=View your code transformation summary
 codemodernizer.explorer.stop_migration_job=Stop Transformation
-codemodernizer.file.invalid_pom_version=Amazon Q experienced an issue upgrading this dependency version. Use Amazon Q chat to upgrade the version of this dependency to a Java 17 compatible version.
+codemodernizer.file.invalid_pom_version=Amazon Q experienced an issue upgrading this dependency version. Use Amazon Q chat to upgrade the version of this dependency to a version compatible with your target Java version.
 codemodernizer.manager.job_ongoing_content=Amazon Q is still transforming your code. To see the current status of the transformation, go to the Transformation Hub.
 codemodernizer.manager.job_ongoing_title=Code Transformation ongoing
 codemodernizer.migration_plan.body.info.action_column=Action
@@ -767,7 +767,7 @@ codemodernizer.notification.warn.download_failed_other.content=Amazon Q ran into
 codemodernizer.notification.warn.download_failed_ssl.content=Please make sure all your certificates for your proxy client have been set up correctly for your IDE.
 codemodernizer.notification.warn.download_failed_wildcard.content=Check your IDE proxy settings and remove any wildcard (*) references, and then try viewing the diff again.
 codemodernizer.notification.warn.expired_credentials.title=Your connection to Q has expired
-codemodernizer.notification.warn.invalid_project.description.reason.missing_content_roots=None of your open modules are supported for code transformation with Amazon Q. Amazon Q can upgrade Java 8, Java 11, and Java 17 projects built on Maven, with content roots configured.
+codemodernizer.notification.warn.invalid_project.description.reason.missing_content_roots=None of your open modules are supported for code transformation with Amazon Q. Amazon Q can upgrade Java 8, Java 11, Java 17, and Java 21 projects built on Maven, with content roots configured.
 codemodernizer.notification.warn.invalid_project.description.reason.not_logged_in=Amazon Q cannot start the transformation as you are not logged in with Identity Center or Builder ID. Also ensure that you are not using IntelliJ version 232.8660.185 and that you are not developing on a remote host (uncommon).
 codemodernizer.notification.warn.invalid_project.description.reason.remote_backend=None of your open modules are supported for code transformation with Amazon Q. Amazon Q cannot transform projects running on a remote host.
 codemodernizer.notification.warn.maven_failed.content=Amazon Q could not run the Maven clean install command to build your module.
