Add configurable key shortcuts for inline and make JB and Q suggestions co-exist (#5270)
* Add configurable key shortcuts for inline and make JB and Q suggestions co-exist

* fix tests

* test fix

* add change notes

* reomve unused var

* fix delete edge cases

* remove necessary code

* remove unnecessary handler

* fix a bug in userInput + typeahead case

* address comments

* ignore flaky test

* fix detektTest and revert @ignore

* fix message order

--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -953,10 +953,15 @@ codewhisperer.gettingstarted.panel.learn_more=Learn more
 codewhisperer.gettingstarted.panel.learn_more.with.q=Learn more about <a href = "https://aws.amazon.com/q/">Amazon Q</a> and <a href ="https://aws.amazon.com/codewhisperer">Codewhisperer  </a>
 codewhisperer.gettingstarted.panel.licence_comment=Already have a license?
 codewhisperer.gettingstarted.panel.login_button=Use for free, no AWS account required
-codewhisperer.inline.accept=Accept Suggestion
+codewhisperer.inline.accept=Accept Amazon Q Suggestion
 codewhisperer.inline.force.accept=Force Accept Suggestion
-codewhisperer.inline.navigate.next=Navigate to Next Suggestion
-codewhisperer.inline.navigate.previous=Navigate to Previous Suggestion
+codewhisperer.inline.navigate.next=Navigate to Next Amazon Q Suggestion
+codewhisperer.inline.navigate.previous=Navigate to Previous Amazon Q Suggestion
+codewhisperer.inline.settings.tab_priority.choice.amazonq=Amazon Q
+codewhisperer.inline.settings.tab_priority.choice.jetbrains=JetBrains(IntelliSense)
+codewhisperer.inline.settings.tab_priority.notification.text=You can adjust the behavior of the Tab key to prioritize accepting either Amazon Q suggestions or JetBrains(IntelliSense) suggestions.
+codewhisperer.inline.settings.tab_priority.prefix=When both suggestions show, press Tab to accept
+codewhisperer.inline.settings.tab_priority.suffix= suggestions first
 codewhisperer.language.error={0} is currently not supported by Amazon Q
 codewhisperer.learn_page.banner.dismiss=Dismiss
 codewhisperer.learn_page.banner.message.new_user=You can always return to this page by clicking "Learn" in the Amazon Q status bar menu.
@@ -984,8 +989,8 @@ codewhisperer.notification.remote.ide_unsupported.title=Amazon Q inline suggesti
 codewhisperer.notification.usage_limit.codescan.warn.content=Amazon Q: You have reached the monthly limit for project reviews.
 codewhisperer.notification.usage_limit.codesuggestion.warn.content=You have reached the monthly fair use limit of code recommendations.
 codewhisperer.popup.button.accept=<html><center>&nbsp;Insert&nbsp;Code&nbsp;<br/><font color="{0}">\u21E5</font></center></html>
-codewhisperer.popup.button.next=<html><center>Next<br/><font color="{0}">&rarr;</font></center></html>
-codewhisperer.popup.button.prev=<html><center>Previous<br/><font color="{0}">&larr;</font></center></html>
+codewhisperer.popup.button.next=<html><center>Next<br/><font color="{0}">{1}</font></center></html>
+codewhisperer.popup.button.prev=<html><center>Previous<br/><font color="{0}">{1}</font></center></html>
 codewhisperer.popup.import_info=<html><p style="margin: 0; width: 210px">If you insert code, "{0}"{2, choice, 0#|1# and {1} other import|2# and {1} other imports} will also be added.</p></html>
 codewhisperer.popup.no_recommendations=No Amazon Q recommendations available at this point
 codewhisperer.popup.pagination_info=Loading additional Amazon Q suggestions...
