chore(amazonq): Update autobuild setting strings

--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -266,7 +266,8 @@ aws.settings.auto_update.notification_enable.tooltip=If unchecked, updates will 
 aws.settings.auto_update.progress.message=Updating AWS plugins
 aws.settings.auto_update.text=Automatically install plugin updates when available
 aws.settings.aws_cli_settings=AWS CLI Settings
-aws.settings.codewhisperer.allow_q_dev_build_test_commands=Amazon Q: Allow Q /dev to run code and test commands
+aws.settings.codewhisperer.feature_development=Feature Development
+aws.settings.codewhisperer.feature_development.allow_running_code_and_test_commands=Allow /dev to run code and test commands
 aws.settings.codewhisperer.automatic_import_adder=Imports recommendation
 aws.settings.codewhisperer.automatic_import_adder.tooltip=Amazon Q will add import statements with code suggestions when necessary
 aws.settings.codewhisperer.code_review=Code Review
