create progress bar for fixing build failure

--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -2078,6 +2078,7 @@ testgen.placeholder.select_an_option = Please select an action to proceed (Accep
 testgen.placeholder.view_diff=Select View Diff to see the generated unit tests
 testgen.placeholder.waiting_on_your_inputs=Waiting on your inputs...
 testgen.progressbar.generate_unit_tests=Generating unit tests...
+testgen.progressbar.build_and_execute=Fixing test errors...
 toolkit.login.aws_builder_id.already_connected.cancel=Use existing AWS Builder ID
 toolkit.login.aws_builder_id.already_connected.message=You already signed in with an AWS Builder ID.\nSign out to add another?
 toolkit.login.aws_builder_id.already_connected.reconnect=Sign out
