Added localized string

--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -141,6 +141,7 @@ amazonqFeatureDev.placeholder.after_code_generation=Choose an option to proceed
 amazonqFeatureDev.placeholder.after_monthly_limit=Chat input is disabled
 amazonqFeatureDev.placeholder.closed_session=Open a new chat tab to continue
 amazonqFeatureDev.placeholder.context_gathering_complete=Gathering context...
+amazonqFeatureDev.placeholder.downloading_and_extracting_lsp_artifacts=Downloading and Extracting Lsp Artifacts...
 amazonqFeatureDev.placeholder.generating_code=Generating code...
 amazonqFeatureDev.placeholder.new_plan=Describe your task or issue in as much detail as possible
 amazonqFeatureDev.placeholder.provide_code_feedback=Provide feedback or comments
