Bug fixes in build and execute

--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -2073,11 +2073,14 @@ testgen.message.regenerate_input=Sure thing. Please provide new instructions for
 testgen.message.success=Unit test generation completed.
 testgen.no_file_found=Sorry, there isn't a source file open right now that I can generate a test for. Make sure you open a source file so I can generate tests.
 testgen.placeholder.enter_slash_quick_actions=Enter "/" for quick actions
+testgen.placeholder.modifyCommand=Type command lines or provide instructions...
 testgen.placeholder.newtab=Ask any coding question or type \u0022/\u0022 for actions
 testgen.placeholder.select_an_option = Please select an action to proceed (Accept or Reject)
 testgen.placeholder.view_diff=Select View Diff to see the generated unit tests
 testgen.placeholder.waiting_on_your_inputs=Waiting on your inputs...
-testgen.progressbar.build_and_execute=Fixing test errors...
+testgen.placeholder.select_an_action_to_proceed=Please select an action to proceed.
+testgen.progressbar.build_and_execute=Compiling project...
+testgen.progressbar.fixing_test_cases=Fixing test failures...
 testgen.progressbar.generate_unit_tests=Generating unit tests...
 toolkit.login.aws_builder_id.already_connected.cancel=Use existing AWS Builder ID
 toolkit.login.aws_builder_id.already_connected.message=You already signed in with an AWS Builder ID.\nSign out to add another?
