--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -1256,7 +1256,7 @@ ecs.service.not_found=Service {0} not found in cluster {1}
 ecs.task_definition.json_schema_name=AWS ECS Task Definition
 ecs.task_definitions=Task Definitions
 environment.variables.dialog.title=Environment Variables
-executableCommon.auto_managed=Managed by AWS Toolkit
+executableCommon.auto_managed=Managed by AWS
 executableCommon.auto_resolved=Auto-detected: {0}
 executableCommon.cli_not_configured={0} executable not configured
 executableCommon.configurable.title=External Tools
