Adding Feedback mechanism V2 version

--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -234,6 +234,7 @@ aws.notification.sam_cli_not_valid=Error: {0}. Click <a href="">here</a> to reco
 aws.notification.title=AWS Toolkit
 aws.notification.title.amazonq=Amazon Q
 aws.notification.title.amazonq.feature_dev=Amazon Q FeatureDev
+aws.notification.title.amazonq.test_generation=Amazon Q Test Generation
 aws.notification.title.codewhisperer=Amazon Q
 aws.onboarding.getstarted.panel.bottom_text=<a href="https://docs.aws.amazon.com/toolkit-for-jetbrains/latest/userguide/auth-access.html">Learn more about authenticating with the Toolkit</a>
 aws.onboarding.getstarted.panel.bottom_text_question=Why do these have different authentication requirements?
@@ -1308,6 +1309,7 @@ feedback.comment.textbox.initial.length=2000 characters remaining
 feedback.comment.textbox.title=What do you like about {0}? What can we improve?
 feedback.comment.textbox.title.amazonq=How was your experience with the upgrade of your Java application?
 feedback.comment.textbox.title.amazonq.feature_dev=How has your experience with Amazon Q been? What can we improve?
+feedback.comment.textbox.title.amazonq.test_generation=How has your experience with Amazon Q Test Generation been? What can we improve?
 feedback.connect.with.github.title=Join us on GitHub
 feedback.customer.alert.info=Please don't add personally identifiable information (PII), confidential or sensitive information in your feedback.<br>Remove any PII when sharing file paths, error messages, etc.
 feedback.description=Submit quick feedback about the AWS Toolkit for JetBrains
@@ -2069,6 +2071,7 @@ testgen.error.generic_technical_error_message=I am experiencing technical diffic
 testgen.error.maximum_generations_reach=You've reached the monthly quota for Amazon Q Developer's agent capabilities. You can try again next month. For more information on usage limits, see the <a href=\"https://aws.amazon.com/q/developer/pricing/\" target=\"_blank\">Amazon Q Developer pricing page</a>.
 testgen.message.cancelled=Unit test generation cancelled.
 testgen.message.failed=Test generation failed
+testgen.message.feedback=Thanks for providing feedback.
 testgen.message.regenerate_input=Sure thing. Please provide new instructions for me to generate the tests, and select the function(s) you would like to test.
 testgen.message.success=Unit test generation completed.
 testgen.no_file_found=Sorry, there isn't a source file open right now that I can generate a test for. Make sure you open a source file so I can generate tests.
